--- a/app/views/application/_navbar-top.haml
+++ b/app/views/application/_navbar-top.haml
@@ -1,4 +1,4 @@
 %nav.navbar.navbar-s1.bg-white
 	.container
 		= link_to root_path, class: 'navbar-brand' do
-			= image_tag 'logo/logo', size: '129x54'
+			= image_tag 'logo/logo.png', size: '129x54'
