change Icons navbar

--- a/app/views/application/_navbar-bottom.haml
+++ b/app/views/application/_navbar-bottom.haml
@@ -1,9 +1,9 @@
 %nav.navbar.fixed-bottom.navbar-dark.bg-inverse
 	.d-flex.justify-content-between
-		= link_to fa_icon('futbol-o'), "#", class: 'navbar-brand'
+		= link_to fa_icon('home'), "#", class: 'navbar-brand'
 		= link_to fa_icon('futbol-o'), "#", class: 'navbar-brand'
 
-		= link_to fa_icon('futbol-o 2x'), "#", class: 'navbar-brand'
+		= link_to fa_icon('circle-o 2x'), "#", class: 'navbar-brand'
 
-		= link_to fa_icon('futbol-o'), "#", class: 'navbar-brand'
-		= link_to fa_icon('futbol-o'), "#", class: 'navbar-brand'
+		= link_to fa_icon('bell'), "#", class: 'navbar-brand'
+		= link_to fa_icon('list-ol'), "#", class: 'navbar-brand'
