Sign up/in mech & Club/Player Association, layout & Models gestion

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,5 +1,13 @@
 body {
-    background-color: #4e5d6c;
+    background-color: $brand-secondary;
+}
+
+.row {
+    margin-bottom: 3rem;
+}
+
+.card {
+    margin-bottom: 1.5rem;   
 }
 
 .wrapper {
