--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,7 +1,14 @@
 // Color
-
-$brand-primary:     #ef5a18;
+$brand-primary:     #fee101;
 $brand-secondary:   #4e5d6c;
 $white:             #fff;
-
 $body-bg:           $white;
+
+// Buttons
+$btn-primary-color: #000;
+$btn-secondary-color: #000;
+
+// Radius
+$border-radius-base:        0px;
+$border-radius-large:       0px;
+$border-radius-small:       0px;
