--- a/app/views/application/_navbar-bottom.haml
+++ b/app/views/application/_navbar-bottom.haml
@@ -3,7 +3,7 @@
 		= link_to fa_icon('home'), "#", class: 'navbar-brand'
 		= link_to fa_icon('futbol-o'), "#", class: 'navbar-brand'
 
-		= link_to fa_icon('circle-o 2x'), "#", class: 'navbar-brand'
+		= link_to fa_icon('user-o 2x'), player, class: 'navbar-brand'
 
 		= link_to fa_icon('bell'), "#", class: 'navbar-brand'
 		= link_to fa_icon('list-ol'), "#", class: 'navbar-brand'
