--- a/app/views/clubs/show.haml
+++ b/app/views/clubs/show.haml
@@ -1,19 +1,31 @@
 %p#notice
 	= notice
 
-%p
-	%strong= 'Name:'
-	= @club.name
+.row
+	.col-12
+		.card
+			.card-block
+				%h1.card-title= @club.name
 
-= link_to 'Edit', edit_club_path(@club)
-= link_to 'Back', clubs_path
+				= link_to 'Edit', edit_club_path(@club)
+				= link_to 'Back', clubs_path
 
-- if @club.teams.present?
+- if @teams.any?
 	.row
 		.col-12
-			%strong= "Equipes du club"
-			
-			- @club.teams.each do |team|
-				= link_to team.name, team
+			.card
+				.card-block
+					%h4.card-title= "Equipes du club (#{@teams.count})"
+					- @teams.each do |team|
+						= link_to team.name, team
 
-= link_to "add team in this club", new_team_path(club_id: @club.id)
+				= link_to "add team in this club", new_team_path(club_id: @club.id), class: 'btn btn-primary'
+
+- if @players.any?
+	.row
+		.col-12
+			.card
+				.card-block
+					%h4.card-title= "Joueurs du club (#{@players.count})"
+					- @players.each do |player|
+						= link_to player_full_name(player), player
