--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,6 +31,11 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
+  <div class="field">
+    <%= f.label :club %><br />
+    <%= f.collection_select(:club_id, Club.all, :id, :name) %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
