Navbar top improvment

--- a/app/views/application/_navbar-bottom.haml
+++ b/app/views/application/_navbar-bottom.haml
@@ -1,9 +1,9 @@
-%nav.navbar.fixed-bottom.navbar-dark.bg-inverse
+%nav.navbar.fixed-bottom.navbar-dark.bg-black
 	.d-flex.justify-content-between
-		= link_to fa_icon('home'), "#", class: 'navbar-brand'
-		= link_to fa_icon('futbol-o'), "#", class: 'navbar-brand'
+		= link_to fa_icon('home'), "#", class: 'navbar-brand my-auto'
+		= link_to fa_icon('futbol-o'), "#", class: 'navbar-brand my-auto'
 
-		= link_to fa_icon('user-o 2x'), player, class: 'navbar-brand'
+		= link_to fa_icon('user-o 2x'), player, class: 'navbar-brand my-auto'
 
-		= link_to fa_icon('bell'), "#", class: 'navbar-brand'
-		= link_to fa_icon('list-ol'), "#", class: 'navbar-brand'
+		= link_to fa_icon('bell'), "#", class: 'navbar-brand my-auto'
+		= link_to fa_icon('list-ol'), "#", class: 'navbar-brand my-auto'
