--- a/app/views/application/_navbar-top.haml
+++ b/app/views/application/_navbar-top.haml
@@ -1,10 +1,15 @@
 %nav.navbar.navbar-s1.bg-white
-	.container
-		= link_to root_path, class: 'navbar-brand mr-auto' do
-			= image_tag 'logo/logo.png', size: '129x54'
-
+	.d-flex.justify-content-between
+		.col-2.spce= ''
 		
-		- if try(:player)
-			.nav-link= link_to player.first_name, destroy_player_session_path, method: :delete
-		- else
-			.nav-link= link_to 'Login', new_player_session_path
+		.col-8
+			= link_to root_path, class: 'navbar-brand' do
+				= image_tag 'logo/logo.svg', size: '250x100'
+		
+		.col-2.my-auto
+			.nav-item
+				- klass = 'nav-link btn btn-outline-primary'
+				- if try(:player)
+					= link_to player.first_name, destroy_player_session_path, method: :delete, class: klass
+				- else
+					= link_to 'Login', new_player_session_path, class: klass
