--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,8 +1,11 @@
 // Color
 $brand-primary:     #fee101;
-$brand-secondary:   #4e5d6c;
+$brand-secondary:   #000;
 $white:             #fff;
 $body-bg:           $white;
+
+$primary: $brand-primary;
+$secondary: $brand-secondary;
 
 // Buttons
 $btn-primary-color: #000;
