--- a/app/views/homepage/show.haml
+++ b/app/views/homepage/show.haml
@@ -2,7 +2,7 @@
 
 	.card.text-center
 		.card-block
-			%h4.card-title= 'Special title treatment'
+			%h2.card-title= 'Your carreer, now.'
 			%p.card-text= 'With supporting text below as a natural lead-in to additional content.'
 
 			= link_to "Rentrer dans le game.", new_player_registration_path, class: 'btn btn-primary'
