--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -3,3 +3,12 @@
     color: $btn-primary-color;
     background: $brand-primary;
 }
+
+.card {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    margin-bottom: 1.5rem;
+    background: rgba(0, 0, 0, 0.6);
+    color: white;
+    border-radius: 0;
+}
