--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <%= render 'navbar-top' %>
 
     <div class="container">
-        <div class="wrapper mt-5">
+        <div class="wrapper">
           <%= notice %>
           <%= alert %>
 
