--- a/app/views/application/_navbar-bottom.haml
+++ b/app/views/application/_navbar-bottom.haml
@@ -15,6 +15,6 @@
 	%nav.navbar.navbar-s1.fixed-bottom
 		.d-flex.justify-content-center.py-2
 			%strong.text-white.navbar-brand.my-auto= "JOIN US"
-			= link_to fa_icon('facebook'), player, class: 'navbar-brand my-auto'
-			= link_to fa_icon('instagram'), player, class: 'navbar-brand my-auto'
-			= link_to fa_icon('snapchat'), player, class: 'navbar-brand my-auto'
+			= link_to fa_icon('facebook'), @facebook_link, class: 'navbar-brand my-auto'
+			= link_to fa_icon('instagram'), @instagram_link, class: 'navbar-brand my-auto'
+			= link_to fa_icon('twitter'), @twitter_link, class: 'navbar-brand my-auto'
