--- a/app/views/teams/show.haml
+++ b/app/views/teams/show.haml
@@ -1,30 +1,27 @@
 .card
-	.card-block
+	.card-block.text-center
 		
-		%h1.card-title= @team.name
-		%h6.card-subtitle.text-muted.mb-4= link_to @team.club.name, @team.club
+		%h4.card-title= link_to @team.club.name, @team.club
+		%h6.card-subtitle.mb-4= @team.name
 
 		%p
-			%strong= 'Category:'
+			%strong= 'Category'
 			= @team.category.name
 
 		%p
-			%strong= 'Level:'
+			%strong= 'Level'
 			= @team.level.name
 
 		%p
-			%strong= 'Division:'
+			%strong= 'Division'
 			= @team.division.name
 
 		%p
-			%strong= 'Group:'
+			%strong= 'Group'
 			= @team.group.name
 
-		= link_to 'Edit', edit_team_path(@team), class: 'btn btn-primary'
-		= link_to 'Back', teams_path, class: 'btn btn-secondary'
-
 .card
-	.card-block
+	.card-block.text-center
 		%h4.card-title= 'Players'
 
 		- @players.each do |player|
