--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -5,10 +5,11 @@
 }
 
 .card {
-    padding-top: 2rem;
+    padding-top:    2rem;
     padding-bottom: 2rem;
-    margin-bottom: 1.5rem;
-    background: rgba(0, 0, 0, 0.6);
-    color: white;
-    border-radius: 0;
+    margin-bottom:  1.5rem;
+    background:     rgba(0, 0, 0, 0.6);
+    color:          white;
+    border-radius:  0;
+    text-align:     center;
 }
