--- a/app/views/application/_navbar-bottom.haml
+++ b/app/views/application/_navbar-bottom.haml
@@ -8,13 +8,14 @@
 			= link_to fa_icon('trophy 2x'), League.find(1), class: 'navbar-brand my-auto'
 
 			= link_to fa_icon('users'), player.club, class: 'navbar-brand my-auto'
-			= link_to fa_icon('list-ol'), "#", class: 'navbar-brand my-auto'
+			= link_to fa_icon('list-ol'), rankings_path, class: 'navbar-brand my-auto'
 
 - else
 
 	%nav.navbar.navbar-s1.fixed-bottom
 		.d-flex.justify-content-center.py-2
 			%strong.text-white.navbar-brand.my-auto= "JOIN US"
-			= link_to fa_icon('facebook'), @facebook_link, class: 'navbar-brand my-auto'
-			= link_to fa_icon('instagram'), @instagram_link, class: 'navbar-brand my-auto'
-			= link_to fa_icon('twitter'), @twitter_link, class: 'navbar-brand my-auto'
+			= link_to fa_icon('facebook'), @facebook_link, class: 'navbar-brand my-auto', target: '_blank'
+			= link_to fa_icon('instagram'), @instagram_link, class: 'navbar-brand my-auto', target: '_blank'
+			= link_to fa_icon('twitter'), @twitter_link, class: 'navbar-brand my-auto', target: '_blank'
+			= link_to fa_icon('youtube'), @youtube_link, class: 'navbar-brand my-auto', target: '_blank'
