--- a/app/views/calendars/index.haml
+++ b/app/views/calendars/index.haml
@@ -1,20 +1,5 @@
-%p#notice= notice
-
 .card
   .card-block
-    %h4.card-title= 'Calendars'
+    %h1.card-title= 'Match à Venir.'
     
-    %table.w-100
-      %thead
-        %tr
-          %th= 'Saison'
-          %th{ colspan: '2' }
-
-      %tbody
-        - @calendars.each do |calendar|
-          %tr
-            %td= link_to calendar.saison, calendar
-            %td= link_to 'Edit', edit_calendar_path(calendar)
-            %td= link_to 'Destroy', calendar, method: :delete, data: { confirm: 'Are you sure?' }
-
-    = link_to 'New Calendar', new_calendar_path, class: 'btn btn-primary btn-block mt-5'
+    .mt-4= image_tag @calendar
