--- a/app/views/homepage/show.haml
+++ b/app/views/homepage/show.haml
@@ -1,7 +1,6 @@
-.card.text-center
+.card.text-center.mt-5
 	.card-block
-		%h2.card-title= 'Your carreer, now.'
-		%p.card-text= 'With supporting text below as a natural lead-in to additional content.'
+		%h2.card-title= "Your carreer starts, now."
 
-		= link_to "Rentrer dans le game.", new_player_registration_path, class: 'btn btn-primary'
+		= link_to "M'inscrire.", new_player_registration_path, class: 'btn btn-primary my-3'
 		= link_to "Me connecter.", new_player_session_path, class: 'btn btn-secondary'
