--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,6 +1,6 @@
 html {
     height: 100%;
-    background: url('background/homepage.jpg') no-repeat;
+    background: asset-url('background/homepage.jpg') no-repeat;
     background-size: cover;
     background-position: 15% 50%;
 }
