--- a/app/views/calendars/index.haml
+++ b/app/views/calendars/index.haml
@@ -2,4 +2,4 @@
   .card-block
     %h1.card-title= 'Match à Venir.'
     
-    .mt-4= image_tag @calendar
+    .mt-4= image_tag @calendar, style: 'max-width: 100%; filter: saturate(1) sepia(1); -webkit-filter: sepia(1) saturate(1);'
