--- a/app/assets/stylesheets/player.scss
+++ b/app/assets/stylesheets/player.scss
@@ -1,6 +1,8 @@
 .player-position {
-    padding: 1.2rem;
-    background: $primary;
-    color: $black;
-    border-radius: 100px;
+    padding:        0.8rem;
+    border:         0.2rem solid black;
+    background:     #fee101;
+    color:          #000;
+    border-radius:  100px;
+    letter-spacing: -0.05rem;
 }
