--- a/app/views/homepage/show.haml
+++ b/app/views/homepage/show.haml
@@ -1,6 +1,6 @@
-.card.text-center.mt-5
+.card.card-transparent.text-center.mt-5
 	.card-block
-		%h2.card-title= "Your carreer starts, now."
+		%h1.card-title.text-white.text-jumbotron= "Your carreer starts, now."
 
 		= link_to "M'inscrire.", new_player_registration_path, class: 'btn btn-primary my-3'
 		= link_to "Me connecter.", new_player_session_path, class: 'btn btn-secondary'
