--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -3,10 +3,24 @@ html {
     background: asset-url('background/homepage.jpg') no-repeat;
     background-size: cover;
     background-position: 15% 50%;
+    background-attachment: fixed;
 }
 
 body {
     background-color: transparent;
+}
+
+.jumbotron {
+    border-radius: 0;
+    background-color: #fee101;
+    padding: 1rem 2rem;
+}
+
+.text-jumbotron {
+    background-color: rgba(0, 0, 0, 0.36);
+    padding: 1.5rem;
+    text-align: justify;
+    font-size: 2.1rem;
 }
 
 .container {
