--- a/app/views/application/_navbar-top.haml
+++ b/app/views/application/_navbar-top.haml
@@ -1,15 +1,12 @@
 %nav.navbar.navbar-s1.bg-white.fixed-top
 	.d-flex.justify-content-between
-		.col-2.spce= ''
 		
-		.col-8
-			= link_to root_path, class: 'navbar-brand' do
-				= image_tag 'logo/logo.svg', size: '250x100'
+		= link_to root_path, class: 'navbar-brand' do
+			= image_tag 'logo/logo.svg', size: '175x100'
 		
-		.col-2.my-auto
-			.nav-item
-				- klass = 'nav-link btn btn-outline-primary py-1 px-0'
-				- if try(:player)
-					= link_to fa_icon('times'), destroy_player_session_path, method: :delete, class: klass
-				- else
-					= link_to fa_icon('sign-in'), new_player_session_path, class: klass
+		.nav-item.my-auto
+			- klass = 'nav-link btn btn-outline-primary mr-4'
+			- if try(:player)
+				= link_to fa_icon('times'), destroy_player_session_path, method: :delete, class: klass
+			- else
+				= link_to fa_icon('sign-in'), new_player_session_path, class: klass
