--- a/app/views/calendars/index.haml
+++ b/app/views/calendars/index.haml
@@ -1,4 +1,4 @@
 .card
   %h6.jumbotron= 'Matches à venir'
   .card-block
-    = image_tag @calendar, style: 'max-width: 20rem;'
+    = image_tag @calendar, style: 'max-width: 100%;'
