--- a/app/views/clubs/show.haml
+++ b/app/views/clubs/show.haml
@@ -1,16 +1,11 @@
 .card.text-center
+	%h6.jumbotron= "Mon Club"
 	.card-block
 		%h1.card-title= @club.name
 
-	- if @teams.any?
-		.card-block
-			%h4.card-title= "Equipes du club (#{@teams.count})"
-			- @teams.each do |team|
-				= link_to team.name, team
-
 	- if @players.any?
 		.card-block
-			%h4.card-title= "Joueurs du club (#{@players.count})"
+			%h4.card-title= "Joueurs (#{@players.count})"
 			- @players.each do |player|
 				%p
 					= link_to player.full_name, player
