--- a/app/views/devise/registrations/new.haml
+++ b/app/views/devise/registrations/new.haml
@@ -1,6 +1,6 @@
 .card
+  %h6.jumbotron= 'Sign up'
   .card-block
-    %h4.card-title= 'Sign up'
  
     = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
       = devise_error_messages!
