--- a/app/views/rankings/index.haml
+++ b/app/views/rankings/index.haml
@@ -1,4 +1,4 @@
 .card.text-center
+	%h6.jumbotron= "Classement & Statistiques" 
 	.card-block
-		%h1.card-title= "Les Classements & Statistiques"
-		%h6.card-subtitle= "seront disponible demain. :)"
+		%h6.card-subtitle= ".. seront disponible demain. :)"
