--- a/app/views/homepage/show.haml
+++ b/app/views/homepage/show.haml
@@ -1,7 +1,7 @@
 .card.text-center.mt-5
 	%h6.jumbotron= "BALLiN"
 	.card-block
-		%h4.card-title= "Your carreer starts now."
+		%h4.card-title= "Your career starts now."
 
 		.card-text
 			= "Toutes nos félicitations et tous nos remerciement aux organisateurs, clubs et aux joueurs de cette deuxieme edition de la "
