--- a/app/views/devise/registrations/new.haml
+++ b/app/views/devise/registrations/new.haml
@@ -60,7 +60,7 @@
         .col-12
           .form-group
             = f.label :club
-            = f.collection_select(:club_id, Club.all, :id, :name, {}, { class: 'form-control' })
+            = f.collection_select(:club_id, Club.where(id: [18..49]), :id, :name, {}, { class: 'form-control' })
 
         .col-12
           .form-group
@@ -74,7 +74,7 @@
         
         .col-12
           .form-group
-            = f.label :best_foot
+            = f.label :best_foot, label: "Meilleur pied"
             = f.text_field :best_foot, class: 'form-control'
         
         .col-12
