--- a/app/views/devise/registrations/new.haml
+++ b/app/views/devise/registrations/new.haml
@@ -74,42 +74,42 @@
         
         .col-12
           .form-group
-            = f.label :best_foot, label: "Meilleur pied"
+            = f.label "Meilleur pied"
             = f.text_field :best_foot, class: 'form-control'
         
         .col-12
           .form-group
-            = f.label :best_side
+            = f.label "Coté préferé"
             = f.text_field :best_side, class: 'form-control'
 
         .col-12
           .form-group
-            = f.label :right_foot_juggles
+            = f.label "Jongles pied droit"
             = f.text_field :right_foot_juggles, class: 'form-control'
 
         .col-12
           .form-group
-            = f.label :left_foot_juggles
+            = f.label "Jongles pied gauche"
             = f.text_field :left_foot_juggles, class: 'form-control'
 
         .col-12
           .form-group
-            = f.label :head_juggles
+            = f.label "Jongles tête"
             = f.text_field :head_juggles, class: 'form-control'
           
         .col-12
           .form-group
-            = f.label :stamina
+            = f.label "Endurance"
             = f.text_field :stamina, class: 'form-control'
 
         .col-12
           .form-group
-            = f.label :speed
+            = f.label :"Vitesse"
             = f.text_field :speed, class: 'form-control'
 
         .col-12
           .form-group
-            = f.label :jump
+            = f.label :"Detente"
             = f.text_field :jump, class: 'form-control'
 
   .actions
