--- a/app/views/homepage/show.haml
+++ b/app/views/homepage/show.haml
@@ -14,25 +14,24 @@
 		.row.text-center
 			.col-12.col-md-6.mb-4.mb-mb-0
 				.card-title= "Pourquoi BALLiN ?"
-				.card-text
-					= "Pour augmenter "
-					%strong= "ta visibilité "
-					= "auprès des agents et des recruteurs"
-
-				.card-text
-					= "Pour prendre en mains les "
-					%strong= "infos "
-					= "que "
-					%strong= "tu "
-					= "souhaites donner aux agents et aux recruteurs de France et de l'étrangers"
+				.card-text= "Pour augmenter TA VISIBILITE auprès des agents et des recruteurs"
+				.card-text= "------"
+				.card-text= "Pour prendre en main les INFOS que TU souhaites donner aux agents et aux recruteurs de France et de l’étranger"
+				.card-text= "------"
+				.card-text= "Pour maximiser TES CHANCES de vivre du football sur le long terme"
+				.card-text= "------"
+				.card-text= "Pour la FORCE du RESEAU #teamballinfc"
 
 			.col-12.col-md-6
 				.card-title= "Comment marche BALLiN ?"
-				.card-text
-					= "BALLiN s'appuie sur la force d'un réseau"
-				.card-text
-					= "Toi, le joueur, tu postes les informations sur tes matchs, tes performances et tes attributs"
-				.card-text
-					= "Nous, BALLiN, mettons à dispositions toutes ces informations aux recruteurs et agents de France et de l'étrangers"
-				.card-text
-					= "En plus de l'information que tu postes, nous venons à ta rencontre, filmer tes matchs pour avoir encore plus d'informations sur toi pour t'aider à vivre du football"
+				.card-text= "BALLIN s’appuie sur la force d’un réseau joueurs-clubs-agents"
+				.card-text= "------"
+				.card-text= "Toi, le joueur, tu postes les informations sur tes matchs, tes performances, tes attributs c’est simple, rapide et fun ☺"
+				.card-text= "------"
+				.card-text= "Nous, les BALLIN BOYZ, mettons à disposition toutes ces informations aux recruteurs et agents de France et de l’étranger"
+				.card-text= "------"
+				.card-text= "En plus de l’information que tu postes, nous venons à ta rencontre filmer tes matchs pour avoir encore plus d’informations sur toi pour t’aider à vivre du football"
+				.card-text= "------"
+				.card-text= "Plus tu postes d’infos, plus nous venons à ta rencontre filmer tes matchs, en faisant des montages de tes de tes meilleurs actions ! #ballintv"
+				.card-text= "------"
+				.card-text= "Enfin, nous, BALLIN, construisons des partenariats avec les entreprises pour trouver des emplois et des stages adaptés à la pratique du football"
