--- a/app/views/application/_navbar-top.haml
+++ b/app/views/application/_navbar-top.haml
@@ -1,5 +1,7 @@
 %nav.navbar.navbar-s1.bg-white.fixed-top
 	.d-flex.justify-content-center
 		
-		= link_to root_path, class: 'navbar-brand' do
+		= link_to root_path, class: 'navbar-brand mr-auto' do
 			= image_tag 'logo/logo.svg', size: '87x50'
+		- if player
+			= link_to('Logout', destroy_player_session_path, method: :delete, class: 'my-auto mr-4')
